--- a/scss/partials/components/_cards.scss
+++ b/scss/partials/components/_cards.scss
@@ -3,13 +3,12 @@
 @use "../utilities/variables";
 
 .card{
-    @extend .card;
+    @extend .carta;
     background-color: rgb(233, 130, 40);
     transition: background-color 0.5s ease;
-}
-
-.card:hover{
-   background-color: rgb(155, 228, 67);
+    &:hover{
+        background-color:rgb(155, 228, 67);
+    }
 }
 
 .primera{
