--- a/scss/partials/utilities/_extend.scss
+++ b/scss/partials/utilities/_extend.scss
@@ -1,4 +1,4 @@
-.card{
+.carta{
     font-family: "WDXL Lubrifont TC", sans-serif;
     box-shadow: 15px 15px rgb(212, 42, 42);
     border-radius: 8px;
