arreglé cards y responsiveness

--- a/scss/partials/utilities/_extend.scss
+++ b/scss/partials/utilities/_extend.scss
@@ -2,4 +2,5 @@
     font-family: "WDXL Lubrifont TC", sans-serif;
     box-shadow: 15px 15px rgb(212, 42, 42);
     border-radius: 8px;
+    width: 18vh;
 }
