--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ footer {
   font-family: "WDXL Lubrifont TC", sans-serif;
   box-shadow: 15px 15px rgb(212, 42, 42);
   border-radius: 8px;
+  width: 18vh;
 }
 
 .card {
